# cs372research

./: .env.example  .gitignore  README.md  README_FULL_PIPELINE.md  README_MULTI_AGENT_DEBATE.md  README_TRADING_SIMULATION.md  baseline_sweep_results.csv  check_all_daily_prices.py  check_daily_prices.py  check_discrepancy.py  check_summaries.py  conftest.py  cot_durations.csv  crit_trajectory.py  instructionsdesign.txt  juli_next_steps_week10.txt  juli_presentation_slides.md  juliprogressweek89.txt  juliprogressweek89_old.txt  meetingnotes.txt  mypy.ini  package-lock.json  package.json  paper.tex  papers.txt  paperupdated.tex  pid_tuning_results.txt  pyproject.toml  recent.txt  refs.bib  requirements.txt  results_tracking_debate_1_round_no_macro.csv  results_tracking_debate_1_round_no_macro_causal_out.csv  results_tracking_debate_1_round_no_macro_causal_out_rca_revise.csv  results_tracking_debate_1_round_no_macro_rr_roles.csv  results_tracking_debate_1_round_rr_single_devil.csv  results_tracking_debate_enriched_no_macro.csv  results_tracking_debate_slim_no_macro.csv  results_tracking_judge_causal_no_macro_causal_out.csv  results_tracking_judge_no_macro_causal_out_cot.csv  (+22 more)
agent_audit_v2/: README.md
agents/: __init__.py  base.py  debate-runner.ts  demo.ts  index.ts  multi_agent_debate.py  prompts.ts  registry.py  single_llm.py  tools.py  types.ts
analysis/: ablation10_narrative_summary.txt  ablation11_early_results.txt  ablation11_intervention_never_fires.txt  ablation7_reasoning_analysis.py  ablation7_reasoning_report.txt  ablation8_null_result_analysis.txt  ablation_paired_ttests.py  crit_ablation7_analysis.py  crit_ablation7_diagnostic_report.md  crit_financial_correlation.py  crit_financial_correlation_abl1.py  crit_financial_correlation_abl1_report.txt  crit_financial_correlation_report.txt  failure_analysis.py  prompting_vs_financial.py  scenario_diversity_analysis.py  scenario_diversity_report.txt  stratified_analysis.py  vs_equal_weight.py  vs_equal_weight_report.txt
config/: HOW_TO_CONFIGURE.md  debate.yaml  debate_2agent_mock.yaml  debate_2agent_real.yaml  debate_3agent_mock.yaml  debate_diverse_agents.yaml  debate_memo.yaml  debate_memo_mock.yaml  debate_memo_pid.yaml  debate_mock.yaml  debate_multiticker_mock.yaml  debate_nontech_mock.yaml  debate_pid_live.yaml  debate_pid_mock.yaml  (+9 more)
(+5769 files in other folders)
