[project]
name = "cs372research"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.0",
    "jsonschema>=4.26.0",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]
