[project]
name = "cs372research"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "finnhub-python>=2.4.27",
    "jinja2>=3.1.0",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "nltk>=3.9.2",
    "pandas>=3.0.1",
    "pydantic>=2.0.0",
    "pytest>=9.0.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.0",
    "pytz>=2025.2",
    "pyyaml>=6.0",
    "yfinance>=1.2.0",
]
